--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
