--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuetify": "^3.0.0-alpha.0",
-    "webfontloader": "^1.0.0"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
@@ -33,8 +31,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.3",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vue-cli-plugin-vuetify": "~2.4.3"
   },
   "eslintConfig": {
     "root": true,
