--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
+    "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
