--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-meta": "^3.0.0-alpha.9",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue3-carousel": "^0.1.30"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
