--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.0.0",
     "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.0.0-0",
+    "vue-scrollactive": "^0.9.3",
     "vue3-carousel": "^0.1.30"
   },
   "devDependencies": {
@@ -30,10 +31,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.38.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.3"
+    "prettier": "^2.2.1"
   },
   "eslintConfig": {
     "root": true,
