--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.4.7",
     "prettier": "^2.2.1"
   },
   "eslintConfig": {
