--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
         check-latest: true
     - name: Install depenencies
       run: yarn
-    - name: Run application
-      run: yarn serve
+    - name: Build application
+      run: yarn build
     # - name: Run linter
     #   run: yarn lint
     # - name: Run tests
