--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@cicd
+        uses: actions/checkout@v2
       - name: Install dependencies
         run: yarn
       - name: Build dependencies
         run: yarn build
       - name: Archive production artifact
-        uses: actions/upload-artifact@cicd
+        uses: actions/upload-artifact@v2
         with:
           name: dist
           path: dist
@@ -26,9 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout repository
-        uses: actions/checkout@cicd
+        uses: actions/checkout@v2
       - name: Download artifact
-        uses: actions/download-artifact@cicd
+        uses: actions/download-artifact@v2
         with: 
           name: dist
           path: dist
