--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Archive production artifact
         uses: actions/upload-artifact@v3
         with:
-          name: dist
+          name: dist-folder
           path: dist
   deploy:
     name: Deploy
@@ -30,7 +30,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with: 
-          name: dist
+          name: dist-folder
           path: dist
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
