--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist-folder
-          path: ./dist
+          path: ./dist/
   deploy:
     name: Deploy
     needs: build
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v3
         with: 
           name: dist-folder
-          path: ./dist
+          path: ./dist/
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
