--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
 name: cd
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   workflow_dispatch:
 
 jobs:
@@ -36,6 +36,6 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
           server: ${{ secrets.ftp_server }}
-          username: ${{ secrets.ftp_username }}
+          username: ${{ secrets.ftp_username_dev }}
           password: ${{ secrets.ftp_password }}
           local-dir: ./dist/
