--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@popperjs/core": "^2.10.2",
+    "@vueuse/head": "^0.7.6",
     "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
+    "vue-head": "^2.2.0",
     "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.0.0-0",
     "vue-select": "^4.0.0-beta.3",
