--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jsdom": "^20.0.0",
+    "puppeteer-prerender-plugin": "^3.0.10",
     "roboto-fontface": "*",
     "vue": "^3.0.0",
     "vue-head": "^2.2.0",
