--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "poi": {
+    "dist": "buildy",
+    "staticFolder": "assets"
+  },
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@popperjs/core": "^2.10.2",
@@ -25,10 +29,12 @@
     "vue-meta": "^3.0.0-alpha.9",
     "vue-router": "^4.0.0-0",
     "vue-select": "^4.0.0-beta.3",
+    "vue-template-compiler": "^2.6.14",
     "vue3-carousel": "^0.1.30"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
+    "@poi/plugin-vue-static": "^12.0.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -40,10 +46,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "poi": "^12.10.3",
     "postcss": "^8.4.12",
-    "prerender-spa-plugin": "^3.4.0",
+    "prerender-spa-plugin": "^3.2.1",
     "prettier": "^2.2.1",
     "tailwindcss": "^3.0.23",
+    "vue-cli-plugin-prerender-spa": "~1.1.6",
     "vue-prerender": "^0.1.2"
   },
   "eslintConfig": {
